--- a/Car_price_prediction_(A_regression_problem).ipynb
+++ b/Car_price_prediction_(A_regression_problem).ipynb
@@ -68,7 +68,7 @@
     {
       "cell_type": "code",
       "source": [
-        "path='/content/drive/MyDrive/Afocas Internship/01-Car Price Prediction/Dataset/'\n",
+        "path='/'\n",
         "data=pd.read_csv(path+'train.csv')"
       ],
       "metadata": {
